--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -495,3 +495,12 @@ doi = {10.13140/RG.2.2.35431.34724}
   url={https://unity.com/},
   urldate={2022-09-21}
 }
+@online{gamesgrowth,
+  title={Gaming is booming and is expected to keep growing. This chart tells you all you need to know},
+  url={https://www.weforum.org/agenda/2022/07/gaming-pandemic-lockdowns-pwc-growth/#:~:text=The%20video%20game%20sector%20is,Image%3A%20PwC.},
+  urldate={2022-09-21},
+  author={Simon Read},
+  day={28},
+  month={July},
+  year={2022}
+}
