--- a/1.einleitung/1.0.einleitung.tex
+++ b/1.einleitung/1.0.einleitung.tex
@@ -1,4 +1,4 @@
-
-EINLEITUNG SCHREIBEN
+Videospiele nehmen seit Jahren mehr und mehr Einzug in den Alltag der Gesellschaft. Immer mehr Kinder, Jugendliche, aber auch Erwachsene und Senioren finden Anklang an der Idee eines virtuellen Universums. Dies zeigt sich auch in den Verkaufszahlen, im Jahr 2021 betrug der Wert der globalen Gaming-Industrie \textit{\$214.2} Milliarden US-Dollar und wird auf einen Wert von \textit{\$321.1} Milliarden US-Dollar im Jahr 2026 geschätzt \cite*[]{gamesgrowth}. Videospiele sind demnach nicht nur ein Hobby oder eine spaßige Erfahrung, sondern auch aus einer kommerziellen Sicht interessant und daher stark relevant für die Industrie. Das Thema dieser Arbeit bezieht sich auf ein spezielles Genre der Videospiele, sogenannte \textit{Resource Management Games}. Das Ziel dieser Arbeit ist es, anhand Analysen und Methoden der nutzungsorientierten Gestaltung ein Spiel zu konzipieren und letztendlich einen Prototypen anzufertigen, der einige untersuchte und als gut beurteilte Elemente enthält. Dabei stehen die Fragen im Vordergrund, welche Elemente dieses Genres gut oder schlecht funktionieren, welche Mechaniken einsteigerfreundlich sind, und wie insgesamt ein Spiel von Anfang bis Ende mittels wissenschaftlicher Methodik erarbeitet werden kann. Es werden zu Beginn die theoretischen Konzepte des Genres, darunter die Fundamente einer Ökonomie, erläutert. Außerdem werden einige Beispiele mit den wichtigsten Eckdaten, beispielsweise Siegbedingungen, vorhandene Ressourcen, User-Interface Elemente und Mechaniken, aufgezeigt. In der anschließenden Analyse wird ein weiterer Titel des Genres näher untersucht. Es werden sowohl User Interface, als auch Mechaniken erörtert, wie auch mehrere Interviews mit gegebenen Fragen zu dem Spiel geführt. Mit diesen Interviews werden verschiedene Hypothesen interessanter Mechaniken und Elemente aufgestellt, welche zur Konzipierung des Prototypen verwendet werden. Des Weiteren wird die Thematik und der Kontext des Spiels etabliert, welcher sich an einer Bienenkolonie orientiert und dabei möglichst wissenschaftlich akkurat sein soll, wodurch auch einige biologische Phänomene in dem Konzept Einklang finden, darunter haploide und diploide Chromosomensätze. Es werden verschiedene Mechaniken erwogen und aufgezeigt, welche sich ebenfalls stark an die Vorgänge einer Bienenkolonie halten. Letztendlich wird der Prototyp in einer gewählten Umgebung implementiert, darunter die generierte Welt anhand einer erörterten Struktur und ein erarbeitetes User-Interface. Dieser Prototyp wird zuletzt in einem User Testing auf die Probe gestellt, wobei Konklusionen aufgestellt werden und gegebene Hypothesen unterstützt werden.
 
 \input{1.einleitung/1.1.geschichte.tex}
+\input{1.einleitung/1.2.motivation.tex}
