--- a/5.analyse/5.2.interview.tex
+++ b/5.analyse/5.2.interview.tex
@@ -6,11 +6,11 @@
     \caption{Die Vier Phasen des Interviews} \label{image:interviewphases}
 \end{figure}
 \subsection{Interviews}
-Für die Ermittlung gut funktionierender Mechaniken und Konzepte wird auf die Methode des kontextuellen Interviews zurückgegriffen \cite*[]{holtzblatt_beyer_1997}. Dazu wird ein Leitfadeninterview angefertigt, um qualitative Daten von den Teilnehmern zu extrahieren und daraus Hypothesen anzufertigen \cite*[]{baur_blasius}. Nachdem die Hypothesen erarbeitet wurden, werden diese mittels einer Umfrage in einem breiten Umfang überprüft. Es werden drei Personen ausgewählt, wobei die Erfahrung aller Personen in Bezug auf das Spiel und das Genre generell variiert. Diese Personen, im Folgenden auch \textit{Probanden} genannt, werden in Einzelgesprächen dazu gebeten, dass Spiel eine Stunde lang zu spielen. Einzelgespräche beziehungsweise -interviews sind Gruppengesprächen vorzuziehen, da die einzelnen Probanden einen entspannteren Zeitplan haben, sich gänzlich auf das Spiel und die Fragen fokussieren können und keine Gefahr laufen, abgelenkt zu werden oder mit anderen Probanden in Gespräche zu gelangen \cite*[]{lankoski_bjork}. Das Interview gliedert sich in vier Phasen (vgl. \autoref{image:interviewphases}).
+Für die Ermittlung gut funktionierender Mechaniken und Konzepte wird auf die Methode der nutzungsorientierten Gestaltung des kontextuellen Interviews zurückgegriffen \cite*[]{holtzblatt_beyer_1997}. Dazu wird ein Leitfadeninterview angefertigt, um qualitative Daten von den Teilnehmern zu extrahieren und daraus Hypothesen anzufertigen \cite*[]{baur_blasius}. Nachdem die Hypothesen erarbeitet wurden, werden diese mittels einer Umfrage in einem breiten Umfang überprüft. Es werden drei Personen ausgewählt, wobei die Erfahrung aller Personen in Bezug auf das Spiel und das Genre generell variiert. Diese Personen, im Folgenden auch \textit{Probanden} genannt, werden in Einzelgesprächen dazu gebeten, dass Spiel eine Stunde lang zu spielen. Einzelgespräche beziehungsweise -interviews sind Gruppengesprächen vorzuziehen, da die einzelnen Probanden einen entspannteren Zeitplan haben, sich gänzlich auf das Spiel und die Fragen fokussieren können und keine Gefahr laufen, abgelenkt zu werden oder mit anderen Probanden in Gespräche zu gelangen \cite*[]{lankoski_bjork}. Das Interview gliedert sich in vier Phasen (vgl. \autoref{image:interviewphases}).
 
 \subsubsection{Versuchsaufbau}
 Im Zentrum des Interviews steht, neben den Einleitungs- und Abschlussfragen, das Videospiel \textit{RimWorld}, welches für eine Stunde lang von den Probanden gespielt wird. Das Spiel läuft zu dem Zeitpunkt der Interviews auf der Version \textit{1.3.3387}, ist auf die englische Sprache eingestellt und wird über die Online-Vertriebsplattform für Computerspiele \textit{Steam} ausgeführt.
-Das Interview ist, wie bereits erläutert, in vier Phasen gegliedert und wird in der Wohnung des Interviewers durchgeführt. Wichtig ist, dass alle Probanden leicht andere Qualifikationen besitzen, sodass ein breites Bild über den Zustand des untersuchten Spiels erstellt werden kann. Es ist fundamental zu erkennen, wie ein Spiel von Kennern, wie auch von Neulingen empfunden wird. Jedes Interview wird dabei mit einem Mikrofon aufgenommen und anschließend transkribiert. Die Transkripte sind wörtlich und nicht lautsprachlich angefertigt. Dies bietet den einfachen Vorteil, dass die später aufgestellten Hypothesen mit Textbelegen der Aussagen der jeweiligen Teilnehmer aufgestellt beziehungsweise belegt werden können. Allerdings werden die Namen der Teilnehmer nicht genannt und stattdessen durch ein Pseudonym ersetzt \cite*[S.97]{lankoski_bjork}. DIE ERSTELLTEN TRANSKRIPTE MÜSSEN NOCH ANGEHANGEN WERDEN UND REFERENZIERT!
+Das Interview ist, wie bereits erläutert, in vier Phasen gegliedert und wird in der Wohnung des Interviewers durchgeführt. Wichtig ist, dass alle Probanden leicht andere Qualifikationen besitzen, sodass ein breites Bild über den Zustand des untersuchten Spiels erstellt werden kann. Es ist fundamental zu erkennen, wie ein Spiel von Kennern, wie auch von Neulingen empfunden wird. Jedes Interview wird dabei mit einem Mikrofon aufgenommen und anschließend transkribiert. Die Transkripte sind wörtlich und nicht lautsprachlich angefertigt. Dies bietet den einfachen Vorteil, dass die später aufgestellten Hypothesen mit Textbelegen der Aussagen der jeweiligen Teilnehmer aufgestellt beziehungsweise belegt werden können. Allerdings werden die Namen der Teilnehmer nicht genannt und stattdessen durch ein Pseudonym ersetzt \cite*[S.97]{lankoski_bjork}. Alle angefertigten Transkripte sind im Anhang auffindbar, wovon für den kommenden Abschnitt \hyperref[transcript:A]{Transkript A}, \hyperref[transcript:B]{Transkript B} und \hyperref[transcript:C]{Transkript C} relevant sind.
  
 \paragraph {Einleitung}
 Um die erhobenen Daten richtig kategorisieren zu können, werden als erstes grundlegende Daten zu der Person an sich erfasst:
@@ -31,26 +31,26 @@ Im zweiten Schritt des Interviews werden etwas spezifischere Fragen zu der Erfah
 Die Phase der Beobachtung beschreibt die Spielphase. Der Proband wird dazu aufgefordert, das Videospiel \textit{RimWorld} zu spielen. Es ist von fundamentaler Wichtigkeit für diese Phase, das die beobachtende Person keinerlei Versuch unternimmt, sich in das Spielgeschehen oder das Verhalten der beobachteten Person einmischt. Es wird auch unterlassen, begangene Fehler aufzuklären oder in irgend einer anderen Art und Weise zu helfen, falls nicht anders möglich. Außerdem ist es wichtig zu erwähnen, dass nicht alle Fragen zwangsweise gestellt werden. Diese Fragen dienen lediglich als Katalog möglicher Fragen, die situativ gestellt werden können.
 
 \begin{itemize}
-    \item F8: Welche Emotion wird gerade verspürt?
-    \item F9: Ist das Spiel für den Probanden immersiv?
-    \item F10: Hat der Proband Verlustängste bezüglich der Kolonisten?
-    \item F11: Wieso machst du \_\_\_?
-    \item F12: Weißt du, was du nun tun kannst?
-    \item F13: Was ist dein nächstes Ziel?
-    \item F14: Verwendet der Proband die Prioritätenliste?
-    \item F15: Kommt der Proband gut mit der indirekten Anweisungsmechanik zurecht?
+    \item F6: Welche Emotion wird gerade verspürt?
+    \item F7: Ist das Spiel für den Probanden immersiv?
+    \item F8: Hat der Proband Verlustängste bezüglich der Kolonisten?
+    \item F9: Wieso machst du \_\_\_?
+    \item F10: Weißt du, was du nun tun kannst?
+    \item F11: Was ist dein nächstes Ziel?
+    \item F12: Verwendet der Proband die Prioritätenliste?
+    \item F13: Kommt der Proband gut mit der indirekten Anweisungsmechanik zurecht?
 \end{itemize}
 
 \paragraph{Abschluss}
 In der Abschlussphase wird der Proband gebeten, eine eigene Meinung abzugeben. Außerdem können Fehler aufgeklärt werden und inhaltliche Fragen beantwortet werden, ohne dass sie nun das Verhalten im Spiel verzerren.
 
 \begin{itemize}
-    \item F16: Was hast du als gut empfunden?
-    \item F17: Was hast du als schlecht empfunden?
-    \item F18: Wie findest du das indirekte Anweisen?
-    \item F19: Was sagst du zu der Ressourcenvielfalt?
-    \item F20: Was hältst du von dem Prioritätensystem?
-    \item F21: Wie findest du die vielen zufällig generierten Umstände?
+    \item F14: Was hast du als gut empfunden?
+    \item F15: Was hast du als schlecht empfunden?
+    \item F16: Wie findest du das indirekte Anweisen?
+    \item F17: Was sagst du zu der Ressourcenvielfalt?
+    \item F18: Was hältst du von dem Prioritätensystem?
+    \item F19: Wie findest du die vielen zufällig generierten Umstände?
 \end{itemize}
 
 \subsubsection{Probanden}
