--- a/6.prototype/6.9.usertest.tex
+++ b/6.prototype/6.9.usertest.tex
@@ -1,8 +1,8 @@
 \subsection{User Testing}
-Für den Abschluss der Implementierung des Prototypen wird ein letzter Test durchgeführt in Form eines User Testing beziehungsweise Produkttests. Der zuvor entwickelte Prototyp mit dem Arbeitstitel \textit{HexaBees} wird in einer letzten Iteration von einem ausgewählten Probanden getestet, wobei sich jegliche Eindrücke, Ideen und Probleme bei der Auseinandersetzung notiert werden, um in späteren Implementationszyklen eingebunden zu werden. Da der zuvor erarbeite Gameplay Loop nicht vollständig im Prototyp vorhanden ist, wird der Gameplay Loop lediglich theoretisch erörtert und das Feedback dazu notiert. Selbstverständlich wäre es interessant, die Eindrücke und Ideen von mehreren Personen aufzugreifen, wird der Einfachheit halber und aus zeitlichen Gründen nicht auf mehrere Personen erweitert.
+Für den Abschluss der Implementierung des Prototypen wird ein letzter Test durchgeführt in Form eines User Testing beziehungsweise Produkttests. Der zuvor entwickelte Prototyp mit dem Arbeitstitel \textit{HexaBees} wird in einer letzten Iteration von einem ausgewählten Probanden getestet, wobei sich jegliche Eindrücke, Ideen und Probleme bei der Auseinandersetzung notiert werden, um in späteren Implementationszyklen eingebunden zu werden. Da der zuvor erarbeite Gameplay Loop nicht vollständig im Prototyp vorhanden ist, wird der Gameplay Loop lediglich theoretisch erörtert und das Feedback dazu notiert. Selbstverständlich wäre es interessant, die Eindrücke und Ideen von mehreren Personen aufzugreifen, das Testing wird der Einfachheit halber und aus zeitlichen Gründen allerdings nicht auf mehrere Personen erweitert.
 
 \subsubsection{Versuchsaufbau}
-Analog zu den Interviews stehen erneut die Fragen und Beobachtung im Vordergrund. Jedoch ist nun die Versuchszeit auf 15 Minuten heruntergesetzt, da sich der Prototyp in einem recht frühen Stadium befindet. Das Transkript zu dem Produkttest befindet sich erneut im Anhang. Anders als im Interview wird der Produkttest auf zwei Phasen begrenzt, die \textit{Einleitung} und der \textit{Hauptteil}. In der Einleitung wird der Versuchsaufbau kurz erläutert, während im Hauptteil Fragen zum Prototypen gestellt und Beobachtungen notiert werden.
+Analog zu den Interviews stehen im Produkttest erneut die Fragen und Beobachtung im Vordergrund. Jedoch ist nun die Versuchszeit auf 15 Minuten heruntergesetzt, da sich der Prototyp in einem recht frühen Stadium befindet. Das Transkript zu dem Produkttest befindet sich erneut im Anhang als \hyperref[transcript:D]{Transkript D}. Anders als im Interview wird der Produkttest auf eine einzelne Phase begrenzt, den \textit{Hauptteil}. In diesem werden Fragen zu sowohl Interface Design, als auch Gameplay Loop oder Spaßfaktor gestellt.
 
 \paragraph{Hauptteil}
 \begin{itemize}
@@ -21,3 +21,27 @@ Analog zu den Interviews stehen erneut die Fragen und Beobachtung im Vordergrund
 \subsubsection{Proband}
 Der ausgewählte Proband war bereits im zuvor durchgeführten Interview als Proband aufgetreten und hat daher mit absoluter Sicherheit Kontakt mit Resource Management Games gehabt. Da mit den Hypothesen der Prototyp erarbeitet wurde, und damit ein großer Fokus auf Einsteigerfreundlichkeit gelegt wurde, empfiehlt es sich, auf Proband A zurückzugreifen, welcher tendenziell weniger Erfahrung mit Videospielen im Allgemeinen vorweist, als die anderen beiden Probanden.
 
+\subsubsection{Ablauf}
+Der Produkttest beginnt, wie bereits zuvor erläutert, direkt mit dem Einblick in das Spielgeschehen. Im Folgenden werden Ergebnisse beziehungsweise Konklusionen mit [KX] gekennzeichnet, welche sich in \autoref{table:conclusions} aufgelistet wiederfinden, wobei das X für die Kennziffer der jeweiligen Konklusion steht. Es wird auf einzelne Hypothesen aus \autoref{table:hypotheses} zurückgegriffen, welche mit gegebenen Konklusionen unterstützt werden und wie bereits zuvor mit [HX] referenziert werden.
+
+Es zeigt sich, dass das Menü noch sehr übersichtlich gehalten ist, wodurch auch ein unerfahrener Proband direkt spielen kann. Zwei Buttons zum Erstellen und Laden eines Spielstandes sind für die nahe Zukunft ausreichend, wodurch sich [H1] bestätigt [K1][Z.4-5]. Die Kamerasteuerung ist scheinbar sehr intuitiv und fühlt sich auch für Menschen mit weniger Erfahrung gut an, weder zu schnell, noch zu langsam, wodurch [H16] gestützt wird. [K2][Z.7-8, Z.69]. Die Farbpalette des UI ist angenehm und passt zum Spiel [K3][Z.13-14]. Auch die Hexagone sind intuitiv gesehen passend für das Spiel hinsichtlich der Thematik [K4][Z.15-18]. Das User-Interface ist selbsterklärend und übersichtlich, auch Menschen mit sehr wenig Erfahrung sind in der Lage, zu erkennen, welche Informationen wo dargestellt werden [K5][Z.19-29].  Die Grafiken im UI scheinen die Überforderung eines Neuanfängers deutlich zu senken und erhöhen das Spielgefühl, wodurch [H14] und [H18] gestützt werden. Die Ausnahme hierbei macht der Nektar, welcher gegebenenfalls mit Honig verwechselt werden kann [Z.46-49]. Diese Fehlinterpretation könnte aber mit einem einfachen Tutorial sehr schnell vermieden werden, wie bereits mit [H20] erörtert. Die Zeit ist gut erkenntlich dargestellt und belegt einen eigenen Quadranten im Bildschirm, ohne beidseitig von weiteren Elementen und Informationen umgeben zu sein, womit [H10] erfolgreich umgesetzt wurde [K6]. Die Zeitsteuerung ergibt im Kontext des Gameplay Loops ergibt auch ohne Videospiel-Erfahrung Sinn und stützt damit [H21][K7][Z.32-35]. Die Trennung der beiden Karten (Außenwelt, Bienenstock) ist ersichtlich, aber eine komplette Trennung wäre nicht sinnvoll [K8][Z.36-44]. Da dies ohnehin nicht geplant war, müssen keine Ideen verworfen werden. Das Gegenteil jedoch ist der Fall, da Proband D die eigentlich geplante Idee selber aufwirft und damit unterstützt [Z.37-41]. Die Anzahl und Variation der Ressourcen scheint ausreichend und intuitiv zu sein in Kontext von einer Bienenkolonie [K9][Z.45-53]. Im Produkttest wurde festgestellt, dass ein Icon falsch implementiert wurde (Honig statt Royal Jelly), was jedoch im Nachhinein behoben wurde [Z.51]. Der Gameplay Loop klingt für Proband D interessant, wenn auch sehr heruntergebrochen auf die wichtigsten Aspekte des Spiels [K10][Z.54-58]. Proband D bringt die Anregung auf, mehr Details in das Spiel einzubauen, beispielsweise Fressfeinde der Bienen, etwa Bären [Z.60-62]. Diese Idee könnte als Hypothese für eine zukünftige Iteration aufgenommen werden, wird für diese Arbeit jedoch nicht weiter untersucht. Außerdem sollten die Bäume von Modell her nicht der gleichen Größe wie die Blumen entsprechen [Z.62]. Diese Anpassung wird aufgrund zeitlicher Umstände vorerst nicht durchgeführt, aber in naher Zukunft umgesetzt. Ein gewisser Spaßfaktor und eine Langzeitmotivation, gegebenenfalls durch replayability, sind ersichtlich und könnten bei Fertigstellung durchaus vorhanden sein, selbst wenn der Proband selber nicht viel Kontakt mit Videospielen hat [K11][Z.63-67].
+
+\begin{table}[]
+    \centering
+    \caption{Übersicht aller aufgestellten Konklusionen des Produkttests}
+    \label{table:conclusions}
+    \begin{tabular}{|l|l|}
+    \hline
+    K1 & Zwei Buttons im Startmenü sind vorerst ausreichend    \\ \hline
+    K2 & Die Kamerasteuerung ist optimal                       \\ \hline
+    K3 & Die gewählte Farbpalette ist angenehm                 \\ \hline
+    K4 & Hexagone unterstreichen die Thematik und sind passend \\ \hline
+    K5 & Das User-Interface ist übersichtlich                  \\ \hline
+    K6 & Die Zeit ist gut erkennbar dargestellt                 \\ \hline
+    K7 & Eine Zeitsteuerung ist eine gute Ergänzung                  \\ \hline
+    K8 & Die Trennung zwischen Außenwelt und Bienenstock ist gut                  \\ \hline
+    K9 & Die Anzahl und Auswahl der Ressourcen ist zufriedenstellend                  \\ \hline
+    K10 & Der Kern des Gameplay Loops ist interessant                  \\ \hline
+    K11 & Ein Spaßfaktor und eine Langzeitmotivation sind erkennbar                  \\ \hline
+    \end{tabular}
+\end{table}
