--- a/main.tex
+++ b/main.tex
@@ -22,9 +22,6 @@
 \section{Einleitung}
 \input{1.einleitung/1.0.einleitung.tex}
 
-\section{Motivation}
-\input{2.motivation/2.0.motivation.tex}
-
 \section{Definition}
 \input{3.definition/3.0.definition.tex}
 
@@ -40,9 +37,15 @@
 \section{Fazit}
 \input{7.fazit/7.0.fazit.tex}
 
+
 \newpage
 \printbibliography
 
 \newpage
 \input{notes.tex}
+
+
+\section{Anhang}
+\input{anhang/8.0.anhang.tex}
+
 \end{document}
