--- a/0.settings/packages.tex
+++ b/0.settings/packages.tex
@@ -7,7 +7,7 @@
 % Useful packages
 \usepackage{amsmath}
 \usepackage{graphicx}
-\usepackage[colorlinks=true, allcolors=blue]{hyperref}
+\usepackage[colorlinks=false, allcolors=blue, hidelinks]{hyperref}
 
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
@@ -48,3 +48,4 @@
 \usepackage{fancyhdr}
 \usepackage{minted}
 \usepackage{ upgreek }
+\usepackage{pdfpages}
