--- a/0.verzeichnisse/0.0.verzeichnisse.tex
+++ b/0.verzeichnisse/0.0.verzeichnisse.tex
@@ -3,3 +3,4 @@
 \input{0.verzeichnisse/0.3.abbildungsverzeichnis.tex}
 \input{0.verzeichnisse/0.4.tabellenverzeichnis.tex}
 \input{0.verzeichnisse/0.5.quellcodeverzeichnis.tex}
+\input{0.verzeichnisse/0.6.glossar.tex}
