--- a/6.prototype/6.0.prototype.tex
+++ b/6.prototype/6.0.prototype.tex
@@ -8,4 +8,6 @@ Für den praktischen Anteil dieser Arbeit wird auf Grundlage der gewonnenen Erke
 \input{6.prototype/6.6.spielende.tex}
 \input{6.prototype/6.7.mechaniken.tex}
 \input{6.prototype/6.8.interface.tex}
-\input{6.prototype/6.10.unittests.tex}
+\input{6.prototype/6.9.usertest.tex}
+\input{6.prototype/6.10.abschluss.tex}
+\input{6.prototype/6.11.unittests.tex}
