Final steps of thesis

--- a/0.cover/cover.tex
+++ b/0.cover/cover.tex
@@ -5,7 +5,7 @@
 \begin{flushleft}
 	Universität Kassel \hfill \today \linebreak
 	Fachgebiet Gender/Diversity \linebreak
-	Exposé Bachelorarbeit \linebreak
+	Bachelorarbeit \linebreak
 	Sommersemester 2022 \linebreak
 \end{flushleft}
 
@@ -25,9 +25,9 @@
 \begin{flushleft}
 	Justin Nicola \linebreak
 	\href{mailto:065369@student.uni-kassel.de}{065369@student.uni-kassel.de} \linebreak
-	Matrikelnummer: 35441124 \linebreak
+	Matrikelnummer 35441124 \linebreak
 	8. Fachsemester \linebreak
-	Studienfach: Informatik, PO2018
+	Studienfach Informatik, PO2018
 \end{flushleft}
 
 % End Deckblatt
