--- a/0.verzeichnisse/0.6.glossar.tex
+++ b/0.verzeichnisse/0.6.glossar.tex
@@ -15,3 +15,16 @@
 \paragraph*{Unit Tests} Dienen dem Testen einzelner Funktionalitäten.
 \paragraph*{Corner Case} Ein wenig wahrscheinlicher Fall 
 \paragraph*{Bug} Ein Fehler im Quellcode 
+\paragraph*{Game Engine} Eine Software zur Bereitstellung verschiedener Systeme, darunter Physik- oder Audiosysteme für die Entwicklung eines Spiels.
+\paragraph*{Realtime Strategy Game} Echtzeit-Strategiespiel
+\paragraph*{Turn Based} Rundenbasiert
+\paragraph*{Isometrisch} Eine Art der Perspektive
+\paragraph*{Domination} Im Kontext von Videospielen meist eine Siegbedingung, welche erfüllt wird durch das Zerstören von Gegnern
+\paragraph*{Replayability} Wiederspielbarkeit, das Gefühl von erneuter Lust ein Spiel zu spielen
+\paragraph*{SAT} SEGA Saturn, eine Konsole von SEGA
+\paragraph*{Tangible} Greifbar, im Kontext von Ressourcen eine Ressource mit Koordinaten im Raum
+\paragraph*{Intangible} Nicht greifbar, im Kontext von Ressourcen eine Ressource, welche sich nicht im Raum befindet
+\paragraph*{Concrete} Konkret, im Kontext von Ressourcen eine Ressource, welche vom Spieler als solche wahrgenommen werden
+\paragraph*{Abstract} Abstrakt, im Kontext von Ressourcen eine Ressource, welche vom Spieler nicht als solche wahrgenommen werden
+
+\paragraph*{Grid} Ein Raster, welches aus bestimmten geometrischen Formen aufgebaut ist
