--- a/3.definition/3.0.definition.tex
+++ b/3.definition/3.0.definition.tex
@@ -27,7 +27,7 @@ Ein Umwandler (engl. \textit{converter}) ist die Mechanik einer Transition zwisc
 Die Mechanik des \textit{Händlers} (engl. \textit{trader}) beschreibt den Austausch von Ressourcen. Anders als ein Umwandler werden jedoch keine Ressourcen erschaffen oder zerstört, sondern lediglich vorhandene ausgetauscht. Diesem Austausch liegt eine \textit{Austauschregel} zugrunde, so kann ein beispielsweise in einem virtuellen Laden vorhandener Gegenstand ein gewisser Betrag an Währung kosten. Durch das Durchführen dieses Austausches erhält das Gegenüber dann den in der Austauschregel geforderten Betrag der Währung, und man selber erhält den geforderten Gegenstand.
 
 \subsection{Informationsgehalt}
-Ein weiterer Pfeiler von Ressource Management Games ist der zu einem Zeitpunkt gegebene \textit{Informationsgehalt}. Um das Spiel spannender zu gestalten, kann es sinnvoll sein, dem Spieler bestimmte Informationen vorzuenthalten. Der Spieler ist folglich dazu gezwungen, Entscheidungen zu treffen basierend auf den derzeit gegebenen Informationen beziehungsweise dem, was der Spieler glaubt zu wissen \cite*[]{paper:information}, was zu interessanten Ansätzen führen kann und Variation in das Spielgeschehen bringt \cite*[]{definition:ressourcemanagementfandom}. Ein Beispiel von fehlenden Informationen ist der sogenannte \textit{fog of war}. Ursprünglich aus einem militärischen Kontext stammend hat dieses Wort große Bedeutung in der Gaming Branche gefunden, speziell in Spielen des Genres \textit{Real Time Strategy} (Echtzeitstrategie). Für gewöhnlich ist in diesem Genre der größte Teil der Karte am Anfang verdeckt. Der Spieler kann sich dazu entscheiden, die Karte zu erkunden und dadurch Informationen zu sammeln, zum Beispiel die Position des Gegners. Fallen bereits aufgedeckte Teile der Karte außerhalb des Sichtfelds der Einheiten des Spielers, so werden sie durch den \textit{fog of war} verdeckt \cite*[]{article:fogofwar}. Der Spieler sieht lediglich den letzten Zustand der Karte, als die Einheiten dort noch Sicht hatten. Um also die Informationen zu aktualisieren ist der Spieler dazu angehalten, erneut Sicht darauf zu erhalten. Diese Mechanik entzieht dem Spieler also bewusst Informationen und spornt dazu an, Entscheidungen über Erkundung und Einheitenplatzierung zu treffen. 
+Ein weiterer Pfeiler von Ressource Management Games ist der zu einem Zeitpunkt gegebene \textit{Informationsgehalt}. Um das Spiel spannender zu gestalten, kann es sinnvoll sein, dem Spieler bestimmte Informationen vorzuenthalten. Der Spieler ist folglich dazu gezwungen, Entscheidungen zu treffen basierend auf den derzeit gegebenen Informationen beziehungsweise dem, was der Spieler glaubt zu wissen \cite*[]{paper:information}, was zu interessanten Ansätzen führen kann und Variation in das Spielgeschehen bringt \cite*[]{definition:ressourcemanagementfandom}. Ein Beispiel von fehlenden Informationen ist der sogenannte \textit{fog of war}. Ursprünglich aus einem militärischen Kontext stammend hat dieses Wort große Bedeutung in der Gaming Branche gefunden, speziell in Spielen des Genres \textit{Realtime Strategy} (Echtzeitstrategie). Für gewöhnlich ist in diesem Genre der größte Teil der Karte am Anfang verdeckt. Der Spieler kann sich dazu entscheiden, die Karte zu erkunden und dadurch Informationen zu sammeln, zum Beispiel die Position des Gegners. Fallen bereits aufgedeckte Teile der Karte außerhalb des Sichtfelds der Einheiten des Spielers, so werden sie durch den \textit{fog of war} verdeckt \cite*[]{article:fogofwar}. Der Spieler sieht lediglich den letzten Zustand der Karte, als die Einheiten dort noch Sicht hatten. Um also die Informationen zu aktualisieren ist der Spieler dazu angehalten, erneut Sicht darauf zu erhalten. Diese Mechanik entzieht dem Spieler also bewusst Informationen und spornt dazu an, Entscheidungen über Erkundung und Einheitenplatzierung zu treffen. 
 
 Eine weitere Möglichkeit, bewusst Informationen vorzuenthalten und den Spieler zu Entscheidungen zu bewegen sind \textit{Events}. Ein Event im Kontext von Game Design ist eine vorprogrammierte Erfahrung, die dem Spieler widerfahren wird. Welche Auswirkungen das auf das Spielgeschehen haben wird ist nicht inbegriffen, sollte aber bei der Erstellung solcher Events berücksichtigt werden. Dem Spieler wird im Voraus meist jedoch nicht mitgeteilt, welche Events stattfinden werden, in welcher Reihenfolge oder zu welchem Zeitpunkt. Die Kernidee ist, dass der Spieler adaptiv darauf reagiert, wodurch eine hohe Vielfalt an möglichen Spielverläufen entsteht und ein Spiel unter Umständen \textit{Wiederspielbarkeit} (engl. \textit{replayability}) verleiht, sodass der Spieler ein Spiel auch mehrfach spielen möchte und keine Langeweile nach bereits kurzer Zeit einsetzt. Diese Art des Entscheidungszwangs bricht also die Monotonie und birgt Potenzial für Strategie \cite*[]{article:events}. Ein Beispiel eines solchen Events wäre in einem Städteaufbauspiel eine plötzliche Hungersnot oder der Ausbruch eines Feuers, wodurch der Spieler dazu angehalten wird, Ressourcen umzulagern oder ähnliche Entscheidungen zu treffen.
 
