--- a/4.beispiele/4.0.beispiele.tex
+++ b/4.beispiele/4.0.beispiele.tex
@@ -4,3 +4,4 @@ Als Klassiker werden im folgenden Spiele genannt, welche bereits etwas älter si
 \input{4.beispiele/4.1.aoe.tex}
 \input{4.beispiele/4.2.civilization.tex}
 \input{4.beispiele/4.3.simcity.tex}
+\input{4.beispiele/4.4.nennungen.tex}
