--- a/6.prototype/6.0.prototype.tex
+++ b/6.prototype/6.0.prototype.tex
@@ -11,3 +11,4 @@ Für den praktischen Anteil dieser Arbeit wird auf Grundlage der gewonnenen Erke
 \input{6.prototype/6.9.usertest.tex}
 \input{6.prototype/6.10.abschluss.tex}
 \input{6.prototype/6.11.unittests.tex}
+\input{6.prototype/6.12.ausblick.tex}
