--- a/6.prototype/6.3.spielwelt.tex
+++ b/6.prototype/6.3.spielwelt.tex
@@ -2,10 +2,10 @@
 Die grundlegende Idee der Spielwelt ist, dass diese in zwei Instanzen geteilt wird. Die erste Instanz stellt die Oberwelt dar, wo Pflanzen und Bäume wachsen, wobei die zweite Instanz den Innenraum des Bienenstocks darstellt. In dem Bienenstock können Strukturen gebaut werden, welche in der Außenwelt nicht verfügbar sind. In der Außenwelt hingegen finden sich die Ressourcen, welche für das Fortleben essenziell sind. Für die gesamte Welt, in welcher das Spiel gespielt wird, stehen mehrere Optionen der Erstellung zur Verfügung.
 
 \paragraph{Gridless}
-Die erste Möglichkeit einer Spielwelt ist eine Karte ohne dargestelltes oder vorhandenes Grid. Solch ein System verwendet beispielsweise \textit{Age of Mythology}, wobei die Karte nicht in ein Grid, sondern viele tausende  Koordinaten eingeteilt ist. Diese Form der Positionierung ist daher gängig für \textit{Real Time Strategy} Spiele.
+Die erste Möglichkeit einer Spielwelt ist eine Karte ohne dargestelltes oder vorhandenes Grid. Solch ein System verwendet beispielsweise \textit{Age of Mythology}, wobei die Karte nicht in ein Grid, sondern viele tausende  Koordinaten eingeteilt ist. Diese Form der Positionierung ist daher gängig für \textit{Realtime Strategy} Spiele.
 
 \paragraph{Square Grid}
-Eine weitere Möglichkeit zur Positionierung von Gebäuden oder Einheiten innerhalb einer Spielwelt ist ein \textit{Square Grid} (vgl. \autoref{image:squaregrid}), also die Einteilung der Karte in eine gewisse Anzahl von Quadraten, welche als eigene Felder agieren und worauf Gebäude oder Einheiten zugreifen können. Dieses System wird unter anderem in \textit{Starcraft II} oder \textit{Age of Empires} verwendet, wodurch auch diese Form der Positionierung gängig für \textit{Real Time Strategy} ist. Allerdings findet man diese Eigenschaft auch in \textit{Turn Based Strategy}, darunter die älteren Teile der \textit{Civilization}-Reihe. Dieses System wurde im Laufe der Jahre jedoch von einem Square Grid auf ein Hex Grid umgestellt.
+Eine weitere Möglichkeit zur Positionierung von Gebäuden oder Einheiten innerhalb einer Spielwelt ist ein \textit{Square Grid} (vgl. \autoref{image:squaregrid}), also die Einteilung der Karte in eine gewisse Anzahl von Quadraten, welche als eigene Felder agieren und worauf Gebäude oder Einheiten zugreifen können. Dieses System wird unter anderem in \textit{Starcraft II} oder \textit{Age of Empires} verwendet, wodurch auch diese Form der Positionierung gängig für \textit{Realtime Strategy} ist. Allerdings findet man diese Eigenschaft auch in \textit{Turn Based Strategy}, darunter die älteren Teile der \textit{Civilization}-Reihe. Dieses System wurde im Laufe der Jahre jedoch von einem Square Grid auf ein Hex Grid umgestellt.
 
 \begin{figure}
     \begin{center}
