--- a/main.tex
+++ b/main.tex
@@ -34,17 +34,14 @@
 \section{Prototyp}
 \input{6.prototype/6.0.prototype.tex}
 
+\newpage
 \section{Fazit}
 \input{7.fazit/7.0.fazit.tex}
-
 
 \newpage
 \printbibliography
 
 \newpage
-\input{notes.tex}
-
-
 \section{Anhang}
 \input{anhang/8.0.anhang.tex}
 
