--- a/0.bib/bib.bib
+++ b/0.bib/bib.bib
@@ -504,3 +504,18 @@ doi = {10.13140/RG.2.2.35431.34724}
   month={July},
   year={2022}
 }
+@online{igdb:factorio,
+  title={IGDB Entry von Factorio},
+  url={https://www.igdb.com/games/factorio},
+  urldate={2022-09-24}
+}
+@online{igdb:frostpunk,
+  title={IGDB Entry von Frostpunk},
+  url={https://www.igdb.com/games/frostpunk},
+  urldate={2022-09-24}
+}
+@online{igdb:warcraft,
+  title={IGDB Entry von Warcraft III},
+  url={https://www.igdb.com/games/warcraft-iii-reign-of-chaos},
+  urldate={2022-09-24}
+}
