Finished the thesis

--- a/5.analyse/5.2.interview.tex
+++ b/5.analyse/5.2.interview.tex
@@ -12,6 +12,7 @@ Für die Ermittlung gut funktionierender Mechaniken und Konzepte wird auf die Me
 Im Zentrum des Interviews steht, neben den Einleitungs- und Abschlussfragen, das Videospiel \textit{RimWorld}, welches für eine Stunde lang von den Probanden gespielt wird. Das Spiel läuft zu dem Zeitpunkt der Interviews auf der Version \textit{1.3.3387}, ist auf die englische Sprache eingestellt und wird über die Online-Vertriebsplattform für Computerspiele \textit{Steam} ausgeführt.
 Das Interview ist, wie bereits erläutert, in vier Phasen gegliedert und wird in der Wohnung des Interviewers durchgeführt. Wichtig ist, dass alle Probanden leicht andere Qualifikationen besitzen, sodass ein breites Bild über den Zustand des untersuchten Spiels erstellt werden kann. Es ist fundamental zu erkennen, wie ein Spiel von Kennern, wie auch von Neulingen empfunden wird. Jedes Interview wird dabei mit einem Mikrofon aufgenommen und anschließend transkribiert. Die Transkripte sind wörtlich und nicht lautsprachlich angefertigt. Dies bietet den einfachen Vorteil, dass die später aufgestellten Hypothesen mit Textbelegen der Aussagen der jeweiligen Teilnehmer aufgestellt beziehungsweise belegt werden können. Allerdings werden die Namen der Teilnehmer nicht genannt und stattdessen durch ein Pseudonym ersetzt \cite*[S.97]{lankoski_bjork}. Alle angefertigten Transkripte sind im Anhang auffindbar, wovon für den kommenden Abschnitt \hyperref[transcript:A]{Transkript A}, \hyperref[transcript:B]{Transkript B} und \hyperref[transcript:C]{Transkript C} relevant sind.
  
+\newpage
 \paragraph {Einleitung}
 Um die erhobenen Daten richtig kategorisieren zu können, werden als erstes grundlegende Daten zu der Person an sich erfasst:
 \begin{itemize}
