--- a/6.prototype/6.1.thematik.tex
+++ b/6.prototype/6.1.thematik.tex
@@ -59,7 +59,7 @@ ausschließlich innerhalb des Bienenstocks aufhalten. Dort reinigen sie die Zell
     \caption{Überblick über den Lebensverlauf einer Biene jeder Kaste (\cite[]{bees:lifeexpectancy})} \label{image:livesofcastes}
 \end{figure}
 
-
+\newpage
 \subsubsection{Lebenserwartungen}
 Die Lebenserwartung einer jeden Biene hängt mit ihrer jeweiligen Kaste zusammen. Die kürzeste Lebensdauer weisen die Drohnen auf, welche zwischen zwei bis vier Wochen leben, da diese anschließend durch die Drohnenschlacht gewaltsam entfernt oder getötet werden. Am längsten hingegen leben Königinnen, mit drei bis fünf Jahren Lebensdauer. Bei Arbeitsbienen ist es entscheidend, ob diese während des Sommers oder gegen Anbruch des Winters geschlüpft sind. Durch die Wintereinnistung steigt die Lebenserwartung der Arbeitsbienen stark an, von gerade mal zwei bis vier Wochen auf sechs bis sieben Monate \cite*[]{bees:lifeexpectancy}. Eine Übersicht dieser Lebenserwartungen ist in \autoref{image:lifeexpectancy} vorzufinden.
 
