--- a/4.beispiele/4.3.simcity.tex
+++ b/4.beispiele/4.3.simcity.tex
@@ -1,5 +1,6 @@
 \subsection{Sim City 2000}
 Sim City 2000 ist ein im Jahr 1993 erschienenes Städteaufbauspiel für Einzelspieler, welches in das Genre \textit{Simulation} fällt \cite{simcity:ea}. Das Spiel wurde ursprünglich von \textit{Maxis} für den Mac entwickelt und publiziert, wurde in den kommenden Jahren jedoch für weitere Konsolen herausgegeben, darunter \textit{SNES, PlayStation} und \textit{Nintendo 64}. Im Jahr 2005 erschien es schließlich für den PC unter Windows \cite{simcity:igdb}. Der Spieler startet auf einer ausgewählten Karte, welche ein \textit{Square Grid} mit verschiedenen Höhen und Terrain besitzt. Die dabei zentrale Ressource ist Geld in Form von US Dollars. Der Spieler kann mit diesem Geld aus einer breiten Palette an Gebäuden wählen, darunter \textit{Schulen, Bibliotheken, Krankenhäuser} und \textit{Kraftwerke} \cite*[]{simcity:igdb}, welche die Bedürfnisse der Einwohner befriedigen und für Recht und Ordnung in der Stadt sorgen. Diese Gebäude besitzen einen Radius, was ein weiteres strategisches Element dieses Spiels darstellt, da auf möglichst sinnvolles Platzieren der jeweiligen Gebäude geachtet werden muss. Für Wohn-, Industrie- und Kaufhausgebäude markiert der Spieler Zonen, statt die Gebäude einzeln zu setzen. Die Gebäude dieser Zonen werden dann, je nach Bedarf, Stück für Stück aufgebaut oder wieder verlassen. Der Bedarf jeweiliger Zonen ist in \autoref{image:simcity} anhand des grünen (Wohngebäude), des blauen (Kaufhausgebäude) und des gelben (Industriegebäude) Balkens am linken Auswahlbalken erkennbar. Zeigt ein Balken dabei in die Richtung des \textit{+}, so signalisiert das \textit{Bedarf}, zeigt der Balken jedoch in die Richtung des \textit{-}, ist \textit{Überschuss} vorhanden. Zwischen diesen Zonen herrscht eine Relation, so benötigen Kaufhausgebäude die Industriegebäude als Produktionsquelle, und Wohngebäude als Käufer. Die Wohngebäude wiederum benötigen Arbeitsplätze, sowohl in Kaufhausgebäuden als auch in Industriegebäuden. Die Industriegebäude benötigen die Arbeitskräfte der Wohngebäude und Abnehmer für die produzierte Ware in Form von Kaufhausgebäuden. Diese Relation wird wie folgt berechnet (R:C:I beschreibt die Relation zwischen Wohngebäuden zu Kaufhausgebäuden zu Industriegebäuden): 
+\newpage
 \begin{itemize}
     \item Unter 10.000 Einwohnern: R:C:I = 4:1:3
     \item Zwischen 10.000 und 60.000 Einwohnern: R:C:I = 4:2:2
