--- a/6.prototype/6.4.spielbeginn.tex
+++ b/6.prototype/6.4.spielbeginn.tex
@@ -1,2 +1,3 @@
+\newpage
 \subsection{Spielbeginn}
 Das Spiel beginnt auf der nun zufällig generierten, hexagonalen Spielwelt. Es wird mit exakt zwei \textit{Arbeitsbienen} und einer \textit{Königin} gestartet, welche sich im mittleren Alter befinden. Diese Bienen starten auf drei zufälligen Kacheln nebeneinander auf einer zufällig generierten Karte.
